# mikedcio-stories-tools

./: .env.example  .gitignore  Cargo.toml  readme.md
app/: Cargo.toml
app/src/: main.rs
client/: Cargo.toml
client/src/: json.rs  lib.rs  url.rs
files/: Cargo.toml
files/src/: download.rs  lib.rs  path.rs  remote.rs  utils.rs
telegram/: Cargo.toml
telegram/src/: api.rs  lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  parse.rs  test.ts
utils/src/bot/: mod.rs  parse.rs
