[package]
name = "files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
reqwest = { version = "0.11", features = ["json", "blocking"] }
crossbeam = "0.8.2"

ftp = "3.0.1"

utils = { path = "../utils" }