[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0.87"
querystring = "1.1.0"
utils = { path = "../utils" }